--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.0",
-    "astro": "^5.3.0",
+    "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.16.4",
     "astro-icon": "^1.1.5",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.11"
